--- a/newCoalMine/Caist.Framework/Caist.Framework.Web/Caist.Framework.Web.csproj
+++ b/newCoalMine/Caist.Framework/Caist.Framework.Web/Caist.Framework.Web.csproj
@@ -1,8 +1,23 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
+  <PropertyGroup Label="Globals">
+    <SccProjectName>Svn</SccProjectName>
+    <SccProvider>SubversionScc</SccProvider>
+    <SccAuxPath>Svn</SccAuxPath>
+    <SccLocalPath>Svn</SccLocalPath>
+  </PropertyGroup>
+
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
+    <StartupObject>Caist.Framework.Web.Program</StartupObject>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Remove="Areas\Redis\**" />
+    <Content Remove="Areas\Redis\**" />
+    <EmbeddedResource Remove="Areas\Redis\**" />
+    <None Remove="Areas\Redis\**" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="BuildBundlerMinifier" Version="2.8.391" />
