--- a/newCoalMine/Caist.Framework/Caist.Framework.Web/appsettings.json
+++ b/newCoalMine/Caist.Framework/Caist.Framework.Web/appsettings.json
@@ -6,17 +6,17 @@
   },
   "AllowedHosts": "*",
   "SystemConfig": {
-    "Demo": false, // 是否是演示模式
-    "LoginMultiple": true, // 是否允许一个账户在多处登录
-    "LoginProvider": "Cookie", // 登录信息保存方式 Cookie Session WebApi
-    "CommandTimeout": 180, // 数据库超时时间，单位秒
-    "SnowFlakeWorkerId": 1, // SnowFlake 节点序号
-    "ApiSite": "http://localhost:5000", // Api地址，例如可以上传文件到Api
-    "DatabaseBackup": "", // 数据库备份路径
-    "VirtualDirectory": "/admin" // 虚拟目录 
+    "Demo": false, // 脢脟路帽脢脟脩脻脢戮脛拢脢陆
+    "LoginMultiple": true, // 脢脟路帽脭脢脨铆脪禄赂枚脮脣禄搂脭脷露脿麓娄碌脟脗录
+    "LoginProvider": "Cookie", // 碌脟脗录脨脜脧垄卤拢麓忙路陆脢陆 Cookie Session WebApi
+    "CommandTimeout": 180, // 脢媒戮脻驴芒鲁卢脢卤脢卤录盲拢卢碌楼脦禄脙毛
+    "SnowFlakeWorkerId": 1, // SnowFlake 陆脷碌茫脨貌潞脜
+    "ApiSite": "http://localhost:5000", // Api碌脴脰路拢卢脌媒脠莽驴脡脪脭脡脧麓芦脦脛录镁碌陆Api
+    "DatabaseBackup": "", // 脢媒戮脻驴芒卤赂路脻脗路戮露
+    "VirtualDirectory": "/admin" // 脨茅脛芒脛驴脗录 
   },
   "DB": {
-    "DBType": "SqlServer", // 数据库类型：SqlServer、MySql、Oracle
+    "DBType": "SqlServer", // 脢媒戮脻驴芒脌脿脨脥拢潞SqlServer隆垄MySql隆垄Oracle
     "ConnectionString": "Server = 192.168.1.231;Database = caist_mk_db;User ID = sa;Password = sasa;Trusted_Connection = False;"
   }
 }
