--- a/newCoalMine/Caist.Framework/Caist.Framework.WebApi/appsettings.json
+++ b/newCoalMine/Caist.Framework/Caist.Framework.WebApi/appsettings.json
@@ -8,13 +8,13 @@
   },
   "AllowedHosts": "*",
   "SystemConfig": {
-    "LoginProvider": "WebApi", // µÇÂ¼ÐÅÏ¢±£´æ·½Ê½ Cookie Session WebApi
-    "CommandTimeout": 180, // Êý¾Ý¿â³¬Ê±Ê±¼ä£¬µ¥Î»Ãë
-    "SnowFlakeWorkerId": 2, // SnowFlake ½ÚµãÐòºÅ
-    "AllowCorsSite": "http://kingsss.com" // ÔÊÐíµÄÆäËûÕ¾µã·ÃÎÊApi
+    "LoginProvider": "WebApi", // ï¿½ï¿½Â¼ï¿½ï¿½Ï¢ï¿½ï¿½ï¿½æ·½Ê½ Cookie Session WebApi
+    "CommandTimeout": 180, // ï¿½ï¿½ï¿½Ý¿â³¬Ê±Ê±ï¿½ä£¬ï¿½ï¿½Î»ï¿½ï¿½
+    "SnowFlakeWorkerId": 2, // SnowFlake ï¿½Úµï¿½ï¿½ï¿½ï¿½
+    "AllowCorsSite": "http://kingsss.com" // ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Õ¾ï¿½ï¿½ï¿½ï¿½ï¿½Api
   },
   "DB": {
-    "DBType": "SqlServer", // Êý¾Ý¿âÀàÐÍ£ºSqlServer¡¢MySql¡¢Oracle
+    "DBType": "SqlServer", // ï¿½ï¿½ï¿½Ý¿ï¿½ï¿½ï¿½ï¿½Í£ï¿½SqlServerï¿½ï¿½MySqlï¿½ï¿½Oracle
     "ConnectionString": "Server = 192.168.1.231;Database = caist_mk_db;User ID = sa;Password = sasa;Trusted_Connection = False;"
   }
 }
