--- a/newCoalMine/Caist.Framework/Caist.Framework.WebService/Caist.Framework.WebService.csproj
+++ b/newCoalMine/Caist.Framework/Caist.Framework.WebService/Caist.Framework.WebService.csproj
@@ -1,5 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
+  <PropertyGroup Label="Globals">
+    <SccProjectName>Svn</SccProjectName>
+    <SccProvider>SubversionScc</SccProvider>
+    <SccAuxPath>Svn</SccAuxPath>
+    <SccLocalPath>Svn</SccLocalPath>
+  </PropertyGroup>
+
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
