add sync to database

--- a/Caist.Framework_Tools/Caist.Framework.Service/App.config
+++ b/Caist.Framework_Tools/Caist.Framework.Service/App.config
@@ -4,9 +4,10 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
   <connectionStrings>
-    <add name="SQLServer" connectionString="Server = 192.168.5.231;Database = caist_mk_db;User ID = sa;Password = sasa;Trusted_Connection = False;" providerName="System.Data.SqlClient" />
+    <add name="SQLServer" connectionString="Server = 192.168.1.231;Database = caist_mk_db;User ID = sa;Password = sasa;Trusted_Connection = False;" providerName="System.Data.SqlClient" />
   </connectionStrings>
 	<appSettings>
+		<add key="WebSocketTimer" value="1000" />
 		<add key="WebSocketAddress" value="127.0.0.1:8000" />
 	</appSettings>
   <runtime>
