--- a/Caist.Framework_Tools/Caist.Framework.Entity/Caist.Framework.Entity.csproj
+++ b/Caist.Framework_Tools/Caist.Framework.Entity/Caist.Framework.Entity.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Entity\AlarmRecordEntity.cs" />
+    <Compile Include="Entity\HistoryEntity.cs" />
     <Compile Include="Entity\PLCEntity.cs" />
     <Compile Include="Entity\SubStationEntity.cs" />
     <Compile Include="Entity\FiberEntity.cs" />
