--- a/Caist.Framework_Tools/Caist.Framework.Service/packages.config
+++ b/Caist.Framework_Tools/Caist.Framework.Service/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Autofac" version="5.1.2" targetFramework="net461" />
+  <package id="AutoMapper" version="4.0.4" targetFramework="net461" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net461" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
