--- a/Caist.Framework_Tools/Caist.Framework.Service/App.config
+++ b/Caist.Framework_Tools/Caist.Framework.Service/App.config
@@ -4,11 +4,16 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
   <connectionStrings>
-    <add name="SQLServer" connectionString="Server = 192.168.1.231;Database = caist_mk_db;User ID = sa;Password = sasa;Trusted_Connection = False;" providerName="System.Data.SqlClient" />
+	  <add name="SQLServer" connectionString="Server = 192.168.200.34;Database = caist_mk_db;User ID = sa;Password = Mchy123456;Trusted_Connection = False;" providerName="System.Data.SqlClient" />
+	  <!--<add name="SQLServer" connectionString="Server = 192.168.1.231;Database = caist_mk_db;User ID = sa;Password = sasa;Trusted_Connection = False;" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
 	<appSettings>
 		<add key="WebSocketTimer" value="1000" />
 		<add key="WebSocketAddress" value="127.0.0.1:8000" />
+		<add key="ConfigPath" value="Config/SyncDataBases.json" />
+		<add key="SyncPointsFolder" value="Content" />
+		<add key="IntervalPath" value="Config/Interval.txt" />
+		<add key="MaxOnceData" value="100" />
 	</appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
