--- a/Caist.Framework_Tools/Caist.Framework.Service/App.config
+++ b/Caist.Framework_Tools/Caist.Framework.Service/App.config
@@ -9,11 +9,13 @@
   </connectionStrings>
 	<appSettings>
 		<add key="WebSocketTimer" value="1000" />
-		<add key="WebSocketAddress" value="127.0.0.1:8000" />
+		<!--<add key="WebSocketAddress" value="127.0.0.1:8000" />-->
+		<add key="WebSocketAddress" value="192.168.200.105:8000" />
 		<add key="ConfigPath" value="Config/SyncDataBases.json" />
 		<add key="SyncPointsFolder" value="Content" />
 		<add key="IntervalPath" value="Config/Interval.txt" />
 		<add key="MaxOnceData" value="100" />
+		<add key="SleepTime" value="1500" />
 	</appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
