--- a/Caist.Framework_Tools/Caist.Framework.Business/Caist.Framework.Business.csproj
+++ b/Caist.Framework_Tools/Caist.Framework.Business/Caist.Framework.Business.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6BC0FCEB-56F5-404F-BE7C-5E1A374B5ACC}</ProjectGuid>
+    <ProjectGuid>{ADC99257-2401-4857-8C2E-982D58ED78F5}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Caist.Framework.Entity</RootNamespace>
-    <AssemblyName>Caist.Framework.Entity</AssemblyName>
+    <RootNamespace>Caist.Framework.Business</RootNamespace>
+    <AssemblyName>Caist.Framework.Business</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -41,22 +41,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Entity\AlarmRecordEntity.cs" />
-    <Compile Include="Entity\HistoryEntity.cs" />
-    <Compile Include="Entity\MqThemeEntity.cs" />
-    <Compile Include="Entity\PLCEntity.cs" />
-    <Compile Include="Entity\PepolePostionEntity.cs" />
-    <Compile Include="Entity\SubStationEntity.cs" />
-    <Compile Include="Entity\FiberEntity.cs" />
-    <Compile Include="Entity\DeviceEntity.cs" />
-    <Compile Include="Entity\AlarmEntity.cs" />
-    <Compile Include="Entity\TagEntity.cs" />
-    <Compile Include="Entity\TagGroupsEntity.cs" />
-    <Compile Include="Extensions.cs" />
-    <Compile Include="Enum\InstructEnum.cs" />
-    <Compile Include="Mapper.cs" />
+    <Compile Include="ApplicationManage\MqThemeBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="PublicEntity.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Caist.Framework.DataAccess\Caist.Framework.DataAccess.csproj">
+      <Project>{0da701dc-48e9-4ca5-b0eb-3b068f2256e7}</Project>
+      <Name>Caist.Framework.DataAccess</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Caist.Framework.Entity\Caist.Framework.Entity.csproj">
+      <Project>{6bc0fceb-56f5-404f-be7c-5e1a374b5acc}</Project>
+      <Name>Caist.Framework.Entity</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
