--- a/Caist.Framework_Tools/Caist.Framework.Service/App.config
+++ b/Caist.Framework_Tools/Caist.Framework.Service/App.config
@@ -1,22 +1,28 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
-    </startup>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
+  </startup>
   <connectionStrings>
-	  <add name="SQLServer" connectionString="Server = 192.168.200.34;Database = caist_mk_db;User ID = sa;Password = Mchy123456;Trusted_Connection = False;" providerName="System.Data.SqlClient" />
-	  <!--<add name="SQLServer" connectionString="Server = 192.168.1.231;Database = caist_mk_db;User ID = sa;Password = sasa;Trusted_Connection = False;" providerName="System.Data.SqlClient" />-->
+    <add name="SQLServer" connectionString="Server = 192.168.1.231;Database = caist_mk_db;User ID = sa;Password = sasa;Trusted_Connection = False;" providerName="System.Data.SqlClient" />
+    <add name="ConnNameSubstationCBZ8000" connectionString="Data Source=192.168.200.40;database=CBZ8000;uid=sa;pwd=" providerName="System.Data.SqlServer" />
+    <add name="ConnNameSubstationCBZ8000_HIS" connectionString="Data Source=192.168.200.40;database=CBZ8000_HIS;uid=sa;pwd=" providerName="System.Data.SqlServer" />
+    
+    <!--<add name="SQLServer" connectionString="Server = 192.168.1.231;Database = caist_mk_db;User ID = sa;Password = sasa;Trusted_Connection = False;" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
-	<appSettings>
-		<add key="WebSocketTimer" value="1000" />
-		<!--<add key="WebSocketAddress" value="127.0.0.1:8000" />-->
-		<add key="WebSocketAddress" value="192.168.200.105:8000" />
-		<add key="ConfigPath" value="Config/SyncDataBases.json" />
-		<add key="SyncPointsFolder" value="Content" />
-		<add key="IntervalPath" value="Config/Interval.txt" />
-		<add key="MaxOnceData" value="100" />
-		<add key="SleepTime" value="1500" />
-	</appSettings>
+  <appSettings>
+    <add key="WebSocketTimer" value="1000" />
+    <!--<add key="WebSocketAddress" value="127.0.0.1:8000" />-->
+    <add key="WebSocketAddress" value="192.168.200.103:8000" />
+    <add key="ConfigPath" value="Config/SyncDataBases.json" />
+    <add key="SyncPointsFolder" value="Content" />
+    <add key="IntervalPath" value="Config/Interval.txt" />
+    <add key="MaxOnceData" value="100" />
+    <add key="SleepTime" value="1500" />
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
+    <!--mqt上传数据间隔默认10秒-->
+    <add key="MQTPushTimer" value="10" />
+  </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -53,4 +59,16 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <system.web>
+    <membership defaultProvider="ClientAuthenticationMembershipProvider">
+      <providers>
+        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
+      </providers>
+    </membership>
+    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
+      <providers>
+        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
+      </providers>
+    </roleManager>
+  </system.web>
 </configuration>
