--- a/SyncDataBase/SyncModel/SyncModel.csproj
+++ b/SyncDataBase/SyncModel/SyncModel.csproj
@@ -49,6 +49,10 @@
       <Project>{287960B3-43E3-4450-8DBE-EED08ABF2963}</Project>
       <Name>SyncCommon</Name>
     </ProjectReference>
+    <ProjectReference Include="..\SyncDataAccess\Caist.Framework.DataAccess.csproj">
+      <Project>{0DA701DC-48E9-4CA5-B0EB-3B068F2256E7}</Project>
+      <Name>Caist.Framework.DataAccess</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
