--- a/SyncDataBase/SyncHelper/SyncDataAccess.csproj
+++ b/SyncDataBase/SyncHelper/SyncDataAccess.csproj
@@ -95,6 +95,14 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\SyncCommon\SyncCommon.csproj">
+      <Project>{287960B3-43E3-4450-8DBE-EED08ABF2963}</Project>
+      <Name>SyncCommon</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SyncDataAccess\Caist.Framework.DataAccess.csproj">
+      <Project>{0da701dc-48e9-4ca5-b0eb-3b068f2256e7}</Project>
+      <Name>Caist.Framework.DataAccess</Name>
+    </ProjectReference>
     <ProjectReference Include="..\SyncModel\SyncModel.csproj">
       <Project>{BC2EE129-80B5-4329-9854-F2203EB93502}</Project>
       <Name>SyncModel</Name>
