--- a/Caist.Framework/Caist.Framework.Web/appsettings.json
+++ b/Caist.Framework/Caist.Framework.Web/appsettings.json
@@ -13,10 +13,12 @@
     "SnowFlakeWorkerId": 1, // SnowFlake 节点序号
     "ApiSite": "http://localhost:5000", // Api地址，例如可以上传文件到Api
     "DatabaseBackup": "", // 数据库备份路径
-    "VirtualDirectory": "/admin" // 虚拟目录 
+    "VirtualDirectory": "/admin", // 虚拟目录 
+    "AddModelLimit":5 //限制主题模块添加数据条数
   },
   "DB": {
     "DBType": "SqlServer", // 数据库类型：SqlServer、MySql、Oracle
+    //"ConnectionString": "Server = 192.168.200.34;Database = caist_mk_db;User ID = sa;Password = Mchy123456;Trusted_Connection = False;"
     "ConnectionString": "Server = 192.168.1.231;Database = caist_mk_db;User ID = sa;Password = sasa;Trusted_Connection = False;"
   }
 }
