--- a/Caist.Framework_Tools/Caist.Framework.Service/packages.config
+++ b/Caist.Framework_Tools/Caist.Framework.Service/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Autofac" version="5.1.2" targetFramework="net461" />
   <package id="AutoMapper" version="4.0.4" targetFramework="net461" />
+  <package id="Fleck" version="1.1.0" targetFramework="net461" />
   <package id="M2Mqtt" version="4.3.0.0" targetFramework="net461" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net461" />
