--- a/Caist.Framework_Tools/Caist.Framework.DataAccess/Caist.Framework.DataAccess.csproj
+++ b/Caist.Framework_Tools/Caist.Framework.DataAccess/Caist.Framework.DataAccess.csproj
@@ -49,6 +49,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Caist.Framework.Service\Libaries\MySql.Data.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Caist.Framework.Sync\SyncLogic\bin\Debug\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="Npgsql, Version=4.1.3.1, Culture=neutral, PublicKeyToken=5d8b90d52f46fda7, processorArchitecture=MSIL">
       <HintPath>..\packages\Npgsql.4.1.3.1\lib\net461\Npgsql.dll</HintPath>
     </Reference>
@@ -113,6 +117,7 @@
     <Compile Include="Cache\PostgreCache.cs" />
     <Compile Include="Cache\SqliteCache.cs" />
     <Compile Include="Cache\SqlServerCache.cs" />
+    <Compile Include="Cache\SyncCache.cs" />
     <Compile Include="DapperExtension.cs" />
     <Compile Include="DapperExtensionAsync.cs" />
     <Compile Include="Connect.cs" />
@@ -131,6 +136,20 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Caist.Framework.Sync\SyncModel\SyncModel.csproj">
+      <Project>{BC2EE129-80B5-4329-9854-F2203EB93502}</Project>
+      <Name>SyncModel</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Caist.Framework.Sync\SyncUtil\SyncUtil.csproj">
+      <Project>{74CB20A4-A37D-45B1-990F-37A66F3F2A1A}</Project>
+      <Name>SyncUtil</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Caist.Framework.Util\Caist.Framework.Util.csproj">
+      <Project>{09457767-DD6C-43CE-8460-946CC2E71021}</Project>
+      <Name>Caist.Framework.Util</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.112.1\build\net40\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.112.1\build\net40\System.Data.SQLite.Core.targets')" />
