优化同步工具占内存问题

--- a/Caist.Framework/Caist.Framework.WebApi/appsettings.json
+++ b/Caist.Framework/Caist.Framework.WebApi/appsettings.json
@@ -11,17 +11,11 @@
     "LoginProvider": "WebApi", // 登录信息保存方式 Cookie Session WebApi
     "CommandTimeout": 180, // 数据库超时时间，单位秒
     "SnowFlakeWorkerId": 2, // SnowFlake 节点序号
-    "AllowCorsSite": "http://192.168.5.23:8000,http://localhost:8000" // 允许的其他站点访问Api
+    "AllowCorsSite": "http://192.168.5.23:8000,http://localhost:8000", // 允许的其他站点访问Api
+    "WebUrI": "http://192.168.5.2:5000" //管理端站点URL，当前配置提供访问上传的附件URL
   },
   "DB": {
     "DBType": "SqlServer", // 数据库类型：SqlServer、MySql、Oracle
-<<<<<<< .mine
-    "ConnectionString": "Server = 192.168.1.231;Database = caist_mk_db;User ID = sa;Password = sasa;Trusted_Connection = False;"
-||||||| .r623
-    "ConnectionString": "Server = 192.168.200.34;Database = caist_mk_db;User ID = sa;Password = Mchy123456;Trusted_Connection = False;"
-=======
     "ConnectionString": "Server = 192.168.5.231;Database = caist_mk_db;User ID = sa;Password = sasa;Trusted_Connection = False;"
-    //"ConnectionString": "Server = 192.168.200.34;Database = caist_mk_db;User ID = sa;Password = Mchy123456;Trusted_Connection = False;"
->>>>>>> .r629
   }
 }
