--- a/Caist.Framework/Caist.Framework.Web/appsettings.json
+++ b/Caist.Framework/Caist.Framework.Web/appsettings.json
@@ -11,7 +11,7 @@
     "LoginProvider": "Cookie", // 登录信息保存方式 Cookie Session WebApi
     "CommandTimeout": 180, // 数据库超时时间，单位秒
     "SnowFlakeWorkerId": 1, // SnowFlake 节点序号
-    "ApiSite": "http://localhost:5000", // Api地址，例如可以上传文件到Api
+    "ApiSite": "https://localhost:44369", // Api地址，例如可以上传文件到Api
     "DatabaseBackup": "", // 数据库备份路径
     "VirtualDirectory": "/admin", // 虚拟目录 
     "AddModelLimit":5 //限制主题模块添加数据条数
