同步执行sql超时问题；其它优化

--- a/Caist.Framework_Tools/Caist.Framework.Service/App.config
+++ b/Caist.Framework_Tools/Caist.Framework.Service/App.config
@@ -17,6 +17,7 @@
     <add key="ConfigPath" value="Config/SyncDataBases.json" />
     <add key="SyncPointsFolder" value="Content" />
     <add key="IntervalPath" value="Config/Interval.txt" />
+    <add key="PeoplePosition" value="Config/PeoplePositionSql.txt" />
     <add key="LogPath" value="Log" />
     <add key="MaxOnceData" value="100" />
     <add key="SleepTime" value="1500" />
