--- a/Caist.Framework_NewTools/Caist.Framework.Service/Caist.Framework.Service.csproj
+++ b/Caist.Framework_NewTools/Caist.Framework.Service/Caist.Framework.Service.csproj
@@ -71,6 +71,9 @@
     <Reference Include="Polly, Version=7.0.0.0, Culture=neutral, PublicKeyToken=c8a3ffc3f8f825cc, processorArchitecture=MSIL">
       <HintPath>..\packages\Polly.7.2.1\lib\net461\Polly.dll</HintPath>
     </Reference>
+    <Reference Include="S7.Net, Version=0.4.0.0, Culture=neutral, PublicKeyToken=d5812d469e84c693, processorArchitecture=MSIL">
+      <HintPath>..\packages\S7netplus.0.4.0\lib\net452\S7.Net.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Configuration" />
@@ -117,12 +120,21 @@
     <Compile Include="FrmMian.Designer.cs">
       <DependentUpon>FrmMian.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmMian_New.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmMian_New.Designer.cs">
+      <DependentUpon>FrmMian_New.cs</DependentUpon>
+    </Compile>
     <Compile Include="M2Mqtt.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FrmMian.resx">
       <DependentUpon>FrmMian.cs</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmMian_New.resx">
+      <DependentUpon>FrmMian_New.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
