添加信息发布定时任务

--- a/Caist.Framework/Caist.Framework.Business.AutoJob/Caist.Framework.Business.AutoJob.csproj
+++ b/Caist.Framework/Caist.Framework.Business.AutoJob/Caist.Framework.Business.AutoJob.csproj
@@ -12,6 +12,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentFTP" Version="32.4.3" />
     <PackageReference Include="Quartz" Version="3.0.7" />
   </ItemGroup>
 
