--- a/Caist.Framework/Caist.Framework.WebApi/appsettings.json
+++ b/Caist.Framework/Caist.Framework.WebApi/appsettings.json
@@ -1,4 +1,4 @@
-{
+ï»¿{
   "Logging": {
     "LogLevel": {
       "Default": "Debug", // Trace,Debug,Information,Warning,Error,Critical
@@ -8,14 +8,19 @@
   },
   "AllowedHosts": "*",
   "SystemConfig": {
-    "LoginProvider": "WebApi", // µÇÂ¼ĞÅÏ¢±£´æ·½Ê½ Cookie Session WebApi
-    "CommandTimeout": 180, // Êı¾İ¿â³¬Ê±Ê±¼ä£¬µ¥Î»Ãë
-    "SnowFlakeWorkerId": 2, // SnowFlake ½ÚµãĞòºÅ
-    "AllowCorsSite": "http://192.168.5.23:8000,http://localhost:8000", // ÔÊĞíµÄÆäËûÕ¾µã·ÃÎÊApi
-    "WebUrI": "http://192.168.5.2:5000" //¹ÜÀí¶ËÕ¾µãURL£¬µ±Ç°ÅäÖÃÌá¹©·ÃÎÊÉÏ´«µÄ¸½¼şURL
+    "LoginProvider": "WebApi", // ç™»å½•ä¿¡æ¯ä¿å­˜æ–¹å¼ Cookie Session WebApi
+    "CommandTimeout": 180, // æ•°æ®åº“è¶…æ—¶æ—¶é—´ï¼Œå•ä½ç§’
+    "SnowFlakeWorkerId": 2, // SnowFlake èŠ‚ç‚¹åºå·
+    "AllowCorsSite": "http://192.168.5.23:8000,http://localhost:8000", // å…è®¸çš„å…¶ä»–ç«™ç‚¹è®¿é—®Api
+    "InformationPublishTemplatePath": "E:\\xxfb\\ä¿¡æ¯å‘å¸ƒæ¨¡æ¿.txt", //ä¿¡æ¯å‘å¸ƒæ¨¡æ¿è·¯å¾„
+    "InformationPublishPath": "E:\\xxfbmb\\", //ä¿¡æ¯å‘å¸ƒè·¯å¾„
+    "FTPServer": "192.168.5.2", //ftpæœåŠ¡å™¨åœ°å€
+    "FTPUser": "administrator", //ftpç”¨æˆ·åç§°
+    "FTPPwd": "zh123", //ftpç”¨æˆ·å¯†ç 
+    "WebUrI": "http://192.168.5.2:5000" //ç®¡ç†ç«¯ç«™ç‚¹URLï¼Œå½“å‰é…ç½®æä¾›è®¿é—®ä¸Šä¼ çš„é™„ä»¶URL
   },
   "DB": {
-    "DBType": "SqlServer", // Êı¾İ¿âÀàĞÍ£ºSqlServer¡¢MySql¡¢Oracle
+    "DBType": "SqlServer", // æ•°æ®åº“ç±»å‹ï¼šSqlServerã€MySqlã€Oracle
     "ConnectionString": "Server = 192.168.1.231;Database = caist_mk_db;User ID = sa;Password = sasa;Trusted_Connection = False;"
   }
 }
