--- a/Winform/Caist.Framework_Tools/Caist.Framework.Service/Caist.Framework.Service.csproj
+++ b/Winform/Caist.Framework_Tools/Caist.Framework.Service/Caist.Framework.Service.csproj
@@ -80,6 +80,10 @@
     <Reference Include="Polly, Version=7.0.0.0, Culture=neutral, PublicKeyToken=c8a3ffc3f8f825cc, processorArchitecture=MSIL">
       <HintPath>..\packages\Polly.7.2.1\lib\net461\Polly.dll</HintPath>
     </Reference>
+    <Reference Include="S7.Net, Version=1.0.0.0, Culture=neutral, PublicKeyToken=d5812d469e84c693, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Caist.Siemens\Caist.Siemens\Libaries\S7.Net.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Configuration" />
