--- a/Web/Caist.Framework/Caist.Framework.WebApi/appsettings.json
+++ b/Web/Caist.Framework/Caist.Framework.WebApi/appsettings.json
@@ -24,6 +24,7 @@
   },
   "DB": {
     "DBType": "SqlServer", // 数据库类型：SqlServer、MySql、Oracle
-    "ConnectionString": "Server = 192.168.1.231;Database = caist_mk_db;User ID = sa;Password = sasa;Trusted_Connection = False;"
+    "ConnectionString": "Server = 192.168.1.231;Database = caist_mk_db;User ID = sa;Password = sasa;Trusted_Connection = False;",
+    //"ConnectionString": "Server = 192.168.20.191;Database = caist_mk_db;User ID = sa;Password = Mchy123456;Trusted_Connection = False;"
   }
 }
