--- a/Winform/Caist.Framework_Tools/Caist.Framework.Service/App.config
+++ b/Winform/Caist.Framework_Tools/Caist.Framework.Service/App.config
@@ -4,13 +4,13 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
   <connectionStrings>
-    <add name="SQLServer" connectionString="Server = 192.168.1.231;Database = caist_mk_db;User ID = sa;Password = sasa;Trusted_Connection = False;" providerName="System.Data.SqlClient" />
-    <add name="PeoplePositionSource" connectionString="Server = 192.168.1.231;Database = newpd;User ID = sa;Password = sasa;Trusted_Connection = False;" providerName="System.Data.SqlClient" />
-    <add name="FiberSource" connectionString="Server = 192.168.1.231;Database = DTS_XLZ;User ID = sa;Password = sasa;Trusted_Connection = False;" providerName="System.Data.SqlClient" />
+    <add name="SQLServer" connectionString="Server = 192.168.20.191;Database = caist_mk_db;User ID = sa;Password = Mchy123456;Trusted_Connection = False;" providerName="System.Data.SqlClient" />
+    <add name="PeoplePositionSource" connectionString="Server = 192.168.20.191;Database = caist_mk_db;User ID = sa;Password = Mchy123456;Trusted_Connection = False;" providerName="System.Data.SqlClient" />
+    <add name="FiberSource" connectionString="Server =192.168.20.236 ;Database = DTS_XLZ;User ID = sa;Password = 2006;Trusted_Connection = False;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="WebSocketTimer" value="3000" />
-    <add key="WebSocketAddress" value="192.168.20.111:8000" />
+    <add key="WebSocketAddress" value="192.168.20.88:8000" />
     <add key="ConfigPath" value="Config/SyncDataBases.json" />
     <add key="SyncPointsFolder" value="Content" />
     <add key="IntervalPath" value="Config/Interval.txt" />    
@@ -50,7 +50,7 @@
     <!--end:安全监控-->
 
     <!--start:供配电OpcDA-->
-    <add key="FBoxOpcDaHost" value="opcda://localhost/Address Space" />
+    <add key="FBoxOpcDaHost" value="opcda://192.168.20.191/Address Space" />
     <!--end:供配电OpcDA-->
   </appSettings>
   <runtime>
