更新PLC读取效率；修复其它一些bug

--- a/Winform/Caist.Framework_Tools/Caist.Framework.Service/App.config
+++ b/Winform/Caist.Framework_Tools/Caist.Framework.Service/App.config
@@ -9,6 +9,7 @@
     <add name="FiberSource" connectionString="Server =192.168.20.236 ;Database = DTS_XLZ;User ID = sa;Password = 2006;Trusted_Connection = False;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
+    <add key="PlcReadTime" value="120" />
     <add key="WebSocketTimer" value="3000" />
     <add key="WebSocketAddress" value="192.168.20.88:8000" />
     <add key="ConfigPath" value="Config/SyncDataBases.json" />
