--- a/Winform/Caist.Framework_Tools/Caist.Framework.Service/Caist.Framework.Service.csproj
+++ b/Winform/Caist.Framework_Tools/Caist.Framework.Service/Caist.Framework.Service.csproj
@@ -141,6 +141,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TestForm.Designer.cs">
+      <DependentUpon>TestForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Tools\Opc_DAHelper.cs" />
     <Compile Include="Tools\OPCHelper.cs" />
     <Compile Include="Tools\OpcTimer.cs">
@@ -163,6 +169,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="TestForm.resx">
+      <DependentUpon>TestForm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Config\SyncDataBases.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
