--- a/Winform/OpcUaHelper-master/OpcUaHelper.Demo/App.config
+++ b/Winform/OpcUaHelper-master/OpcUaHelper.Demo/App.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+	<appSettings>
+		<add key="OpcServer" value="opc.tcp://118.24.36.220:62547/DataAccessServer"/>
+	</appSettings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
