--- a/Winform/Caist.Framework_Tools/Caist.Framework.Service/Caist.Framework.Service.csproj
+++ b/Winform/Caist.Framework_Tools/Caist.Framework.Service/Caist.Framework.Service.csproj
@@ -142,6 +142,10 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestForm.cs" />
+    <Compile Include="TestForm.Designer.cs">
+      <DependentUpon>TestForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Tools\OpcDASubClass.cs" />
     <Compile Include="Tools\OpcTimer.cs">
       <SubType>Component</SubType>
@@ -160,6 +164,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="TestForm.resx">
+      <DependentUpon>TestForm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Config\SyncDataBases.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
