--- a/Winform/Caist.Framework_Tools/SyncFiles/SyncFiles.csproj
+++ b/Winform/Caist.Framework_Tools/SyncFiles/SyncFiles.csproj
@@ -126,6 +126,12 @@
     <Compile Include="FormFiber.Designer.cs">
       <DependentUpon>FormFiber.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormSubstation.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormSubstation.Designer.cs">
+      <DependentUpon>FormSubstation.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tools\OpcTimer.cs">
@@ -134,6 +140,9 @@
     <Compile Include="Tools\OpcHelper.cs" />
     <EmbeddedResource Include="FormFiber.resx">
       <DependentUpon>FormFiber.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormSubstation.resx">
+      <DependentUpon>FormSubstation.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
